// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxDropdown should be able to select item from list 1`] = `
.c6 {
  text-align: center;
}

.c10 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c16 {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 1px solid #999;
  background: transparent;
  text-align: center;
  border-radius: 4px;
  line-height: 1em;
}

.c12 {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 1px solid;
  text-align: center;
  border-radius: 4px;
  line-height: 1em;
}

.c13 {
  font-size: 0.75em;
  font-weight: bold;
}

.c15 {
  color: #999;
  margin-left: 1.5em;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 0.25em 0;
}

.c9:hover .c11 {
  border-color: #333;
}

.c9:hover .c14 {
  color: #666;
}

.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c7 {
  width: 100%;
  padding: 0;
  border: 1px solid;
  border-top: none;
  position: absolute;
  top: 22px;
  border-radius: 0 0 4px 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  z-index: 1;
  box-sizing: border-box;
}

.c5 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c8 {
  padding-top: 1em;
  padding-left: 0.5em;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      data-button-test={true}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c4"
      >
        Array [
          "",
          .c0 {
  font-size: 1.25em;
  font-weight: bold;
}

<span
            className="c0"
          >
            1 selected
          </span>,
        ]
      </span>
      <span
        className="c5 c6 lni lni-chevron-up"
      />
    </button>
    <ul
      className="c7"
      data-item-list-test={true}
    >
      <li
        className="c8"
      >
        <label
          className="c9"
        >
          <input
            checked={true}
            className="c10"
            onChange={[Function]}
            type="checkbox"
            value="1"
          />
          <div
            checked={true}
            className="c11 c12"
          >
            <span
              className="c13 c6 lni lni-checkmark"
            />
          </div>
          <span
            className="c14 c15"
          >
            Item 1
          </span>
        </label>
      </li>
      <li
        className="c8"
      >
        <label
          className="c9"
        >
          <input
            checked={false}
            className="c10"
            onChange={[Function]}
            type="checkbox"
            value="2"
          />
          <div
            checked={false}
            className="c11 c16"
          />
          <span
            className="c14 c15"
          >
            Item 2
          </span>
        </label>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CheckboxDropdown should call default props onClick function when no onClick property is passed 1`] = `
.c6 {
  text-align: center;
}

.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c5 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      data-button-test={true}
      onClick={[Function]}
      type="button"
    >
      
      <span
        className="c4"
      >
        
      </span>
      <span
        className="c5 c6 lni lni-chevron-down"
      />
    </button>
  </div>
</div>
`;

exports[`CheckboxDropdown should have onClick listener 1`] = `
.c6 {
  text-align: center;
}

.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c5 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      data-button-test={true}
      onClick={[Function]}
      type="button"
    >
      
      <span
        className="c4"
      >
        
      </span>
      <span
        className="c5 c6 lni lni-chevron-down"
      />
    </button>
  </div>
</div>
`;

exports[`CheckboxDropdown should render 1`] = `
.c6 {
  text-align: center;
}

.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c5 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      data-button-test={true}
      onClick={[Function]}
      type="button"
    >
      
      <span
        className="c4"
      >
        
      </span>
      <span
        className="c5 c6 lni lni-chevron-down"
      />
    </button>
  </div>
</div>
`;

exports[`CheckboxDropdown should render in open state 1`] = `
.c7 {
  text-align: center;
}

.c11 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c13 {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 1px solid #999;
  background: transparent;
  text-align: center;
  border-radius: 4px;
  line-height: 1em;
}

.c15 {
  color: #999;
  margin-left: 1.5em;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 0.25em 0;
}

.c10:hover .c12 {
  border-color: #333;
}

.c10:hover .c14 {
  color: #666;
}

.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c8 {
  width: 100%;
  padding: 0;
  border: 1px solid;
  border-top: none;
  position: absolute;
  top: 22px;
  border-radius: 0 0 4px 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  z-index: 1;
  box-sizing: border-box;
}

.c6 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c9 {
  padding-top: 1em;
  padding-left: 0.5em;
}

.c5 {
  font-size: 1.25em;
  font-weight: bold;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      data-button-test={true}
      onClick={[Function]}
      type="button"
    >
      
      <span
        className="c4"
      >
        
        <span
          className="c5"
        >
          0 selected
        </span>
      </span>
      <span
        className="c6 c7 lni lni-chevron-up"
      />
    </button>
    <ul
      className="c8"
      data-item-list-test={true}
    >
      <li
        className="c9"
      >
        <label
          className="c10"
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
            value="1"
          />
          <div
            checked={false}
            className="c12 c13"
          />
          <span
            className="c14 c15"
          >
            Item 1
          </span>
        </label>
      </li>
      <li
        className="c9"
      >
        <label
          className="c10"
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
            value="2"
          />
          <div
            checked={false}
            className="c12 c13"
          />
          <span
            className="c14 c15"
          >
            Item 2
          </span>
        </label>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CheckboxDropdown should render label 1`] = `
.c7 {
  text-align: center;
}

.c11 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c13 {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 1px solid #999;
  background: transparent;
  text-align: center;
  border-radius: 4px;
  line-height: 1em;
}

.c15 {
  color: #999;
  margin-left: 1.5em;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 0.25em 0;
}

.c10:hover .c12 {
  border-color: #333;
}

.c10:hover .c14 {
  color: #666;
}

.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c8 {
  width: 100%;
  padding: 0;
  border: 1px solid;
  border-top: none;
  position: absolute;
  top: 22px;
  border-radius: 0 0 4px 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  z-index: 1;
  box-sizing: border-box;
}

.c6 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c9 {
  padding-top: 1em;
  padding-left: 0.5em;
}

.c5 {
  font-size: 1.25em;
  font-weight: bold;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      data-button-test={true}
      onClick={[Function]}
      type="button"
    >
      
      <span
        className="c4"
      >
        hello
        <span
          className="c5"
        >
          0 selected
        </span>
      </span>
      <span
        className="c6 c7 lni lni-chevron-up"
      />
    </button>
    <ul
      className="c8"
      data-item-list-test={true}
    >
      <li
        className="c9"
      >
        <label
          className="c10"
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
            value="1"
          />
          <div
            checked={false}
            className="c12 c13"
          />
          <span
            className="c14 c15"
          >
            Item 1
          </span>
        </label>
      </li>
      <li
        className="c9"
      >
        <label
          className="c10"
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
            value="2"
          />
          <div
            checked={false}
            className="c12 c13"
          />
          <span
            className="c14 c15"
          >
            Item 2
          </span>
        </label>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CheckboxDropdown should render react node label 1`] = `
.c7 {
  text-align: center;
}

.c11 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c13 {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 1px solid #999;
  background: transparent;
  text-align: center;
  border-radius: 4px;
  line-height: 1em;
}

.c15 {
  color: #999;
  margin-left: 1.5em;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 0.25em 0;
}

.c10:hover .c12 {
  border-color: #333;
}

.c10:hover .c14 {
  color: #666;
}

.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c8 {
  width: 100%;
  padding: 0;
  border: 1px solid;
  border-top: none;
  position: absolute;
  top: 22px;
  border-radius: 0 0 4px 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  z-index: 1;
  box-sizing: border-box;
}

.c6 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c9 {
  padding-top: 1em;
  padding-left: 0.5em;
}

.c5 {
  font-size: 1.25em;
  font-weight: bold;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      data-button-test={true}
      onClick={[Function]}
      type="button"
    >
      
      <span
        className="c4"
      >
        <div>
          hello
        </div>
        <span
          className="c5"
        >
          0 selected
        </span>
      </span>
      <span
        className="c6 c7 lni lni-chevron-up"
      />
    </button>
    <ul
      className="c8"
      data-item-list-test={true}
    >
      <li
        className="c9"
      >
        <label
          className="c10"
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
            value="1"
          />
          <div
            checked={false}
            className="c12 c13"
          />
          <span
            className="c14 c15"
          >
            Item 1
          </span>
        </label>
      </li>
      <li
        className="c9"
      >
        <label
          className="c10"
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
            value="2"
          />
          <div
            checked={false}
            className="c12 c13"
          />
          <span
            className="c14 c15"
          >
            Item 2
          </span>
        </label>
      </li>
    </ul>
  </div>
</div>
`;
